# stationery-shop

./: .env.example  .gitignore  Makefile  README.md  cypress.config.js  docker-compose.yml  package.json  pyproject.toml  vite.config.js
cypress/e2e/Main/: index.cy.js
cypress/fixtures/: product.json  product2.json  products.json
project/inventory/: admin.py  models.py  urls.py
project/inventory/fixtures/: iohistories.json  products.json  users.json
project/inventory/migrations/: 0001_initial.py
project/project/: settings.py  urls.py
react-app/: index.html
react-app/js/: main.jsx
react-app/scss/: main.scss
