[tool.poetry]
name = "django-react-boilerplate"
version = "0.1.0"
description = ""
authors = ["Labcodes <support@labcodes.com.br>"]

[tool.poetry.dependencies]
python = "^3.6.14"
Django = "^3.2.5"
django-pwa = "^1.0.10"
djangorestframework = "^3.12.4"
python-decouple = "^3.5"
black = "^21.7b0"
rq = "^1.10.0"
redis = "^3.5.3"
model-bakery = "^1.3.2"
dj-database-url = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
